Detect new network interfaces, and new partitions

BUG:263696