ksysguardd/modules.h
@@ -113,6 +113,14 @@ typedef int (*IVFunc)( void );
 #define NULLIVFUNC ((IVFunc) 0)
 #define NULLTIME ((unsigned long long) 0)
 
+/* Here we state all the available "modules" for a system.
+ * 1. configName    - Just a name that it associated with it
+ * 2. initCommand   - The function that will be called once when ksysguardd is started
+ * 3. extiCommand   - The function that will be called once when ksysguardd is closed, if it's closed nicely
+ * 4. updateCommand - The function that will be called when any of the functions for that module are called
+ * 5. checkCommand  - The function that will be called periodically after 5 seconds, when any next command is issued
+ * 6. available     - Used internally - set to 0 here
+ * 7. timeCentiSeconds - Used internally - set to NULLTIME here */
 struct SensorModul SensorModulList[] = {
 #ifdef OSTYPE_Linux
   { "Acpi", initAcpi, exitAcpi, updateAcpi, NULLVVFUNC, 0, NULLTIME },
@@ -127,7 +135,7 @@ struct SensorModul SensorModulList[] = {
   { "LoadAvg", initLoadAvg, exitLoadAvg, updateLoadAvg, NULLVVFUNC, 0, NULLTIME },
   { "LogFile", initLogFile, exitLogFile, NULLIVFUNC, NULLVVFUNC, 0, NULLTIME },
   { "Memory", initMemory, exitMemory, updateMemory, NULLVVFUNC, 0, NULLTIME },
-  { "NetDev", initNetDev, exitNetDev, updateNetDev, NULLVVFUNC, 0, NULLTIME },
+  { "NetDev", initNetDev, exitNetDev, updateNetDev, checkNetDev, 0, NULLTIME },
   { "NetStat", initNetStat, exitNetStat, NULLIVFUNC, NULLVVFUNC, 0, NULLTIME },
   { "ProcessList", initProcessList, exitProcessList, NULLIVFUNC, NULLVVFUNC, 0, NULLTIME },
   { "Stat", initStat, exitStat, updateStat, NULLVVFUNC, 0, NULLTIME },
